# yana

./: .gitignore  README.md
software_framework/: .gitignore  accelerator_deploy.py  accelerator_export.py  accelerator_train.py  deploy_checkpoint.py  prune_network.py  pyproject.toml  requirements.txt  train_network.py
software_framework/checkpoints/: nmnist.ckpt  nmnist_30_pruning.ckpt  nmnist_60_pruning.ckpt  nmnist_90_pruning.ckpt  shd.ckpt  shd_30_pruning.ckpt  shd_60_pruning.ckpt  shd_90_pruning.ckpt
software_framework/pretrained/nmnist/checkpoints/: epoch=21-val_acc=0.97.ckpt
software_framework/pretrained/nmnist_pruning/: parsed_config.yaml
software_framework/pretrained/nmnist_pruning/checkpoints/: sparsity=0.20-epoch=0-val_acc=0.9543.ckpt  sparsity=0.60-epoch=5-val_acc=0.9527.ckpt
software_framework/pretrained/nmnist_two_layer/checkpoints/: epoch=18-val_acc=0.96.ckpt
software_framework/pretrained/nmnist_two_layer_pruning/: parsed_config.yaml
software_framework/pretrained/nmnist_two_layer_pruning/checkpoints/: sparsity=0.20-epoch=0-val_acc=0.9422.ckpt  sparsity=0.60-epoch=4-val_acc=0.9456.ckpt
software_framework/pretrained/shd_pruning/: parsed_config.yaml
software_framework/pretrained/shd_two_layer_pruning/: parsed_config.yaml
software_framework/yana/: __init__.py  __main__.py
software_framework/yana/core/: hardware_config.py  logging.py  neuron_config.py  quant_options.py
software_framework/yana/deploy/: __init__.py  accelerator.py  core.py  dataset_export.py  file_export.py  fixed_point.py  input.py  mapping.py  memory.py  operator_graph.py
(+222 files in other folders)
