[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yana"
version = "0.0.1"
description = "YANA Toolchain - Seamless integration of training workflow with deployment onto the YANA framework"
readme = "README.md"
authors = [
    {name = "Moritz Neher", email = "neher@fzi.de"}
]
maintainers = [
    {name = "Moritz Neher", email = "neher@fzi.de"}
]
keywords = ["spiking neural networks", "neuromorphic", "hardware acceleration", "NIR", "deployment"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://fzi.de"
Repository = "https://fzi.de"
Documentation = "https://fzi.de"
"Bug Tracker" = "https://fzi.de"

[tool.setuptools.packages.find]
where = ["."]
include = ["yana*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
yana = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]
